# spec_math

./: Cargo.toml  README.md
src/: lib.rs
src/cephes64/: airy.rs  bdtr.rs  beta.rs  btdtr.rs  cbrt.rs  chbevl.rs  chdtr.rs  consts.rs  dawsn.rs  ei.rs  ellie.rs  ellik.rs  ellpe.rs  ellpj.rs  ellpk.rs  expn.rs  fac.rs  fdtr.rs  fresnl.rs  gamma.rs  gdtr.rs  i0.rs  i1.rs  igam.rs  igami.rs  incbet.rs  incbi.rs  j0.rs  j1.rs  jv.rs  k0.rs  k1.rs  kn.rs  lanczos.rs  mod.rs  nbdtr.rs  ndtr.rs  ndtri.rs  pdtr.rs  polevl.rs  (+12 more)
src/misc/: besselpoly.rs  carlson.rs  erfinv.rs  gammasgn.rs  mod.rs  pdfs.rs  poch.rs
src/utils/: mod.rs
