[package]
name = "spec_math"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust implementations of special mathematical functions"
keywords = ["CEPHES", "special", "elliptic", "jacobian"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
